# fridge-gen

./: .gitignore  CMakeLists.txt  LICENSE  README.md  readme.md
src/: main.cpp
src/server/: server.cpp  server.h
